# python-pmpm

./: .bumpversion.cfg  .coveragerc  .editorconfig  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  environment.yml  makefile  pyproject.toml  setup.cfg
.github/workflows/: integration-test.yml  release.yml  sphinx.yml  test.yml  tox.yml
docs/: CHANGELOG.md  README.md  badges.csv  conf.py  index.md  installation.rst  usage.rst
docs/reference/: pmpm.rst
examples/: linux-mkl-mpich.yml  linux-mkl-nompi.yml  linux-mkl-openmpi.yml  linux-mkl.yml  linux-nomkl-mpich.yml  linux-nomkl-nompi.yml  linux-nomkl-openmpi.yml  linux-nomkl.yml  linux.yml  macos-mkl-mpich.yml  macos-mkl-nompi.yml  macos-mkl-openmpi.yml  macos-mkl.yml  macos-nomkl-mpich.yml  macos-nomkl-nompi.yml  macos-nomkl-openmpi.yml  macos-nomkl.yml  macos.yml  windows-mkl-mpich.yml  windows-mkl-nompi.yml  windows-mkl-openmpi.yml  windows-mkl.yml  windows-nomkl-mpich.yml  windows-nomkl-nompi.yml  windows-nomkl-openmpi.yml  windows-nomkl.yml  windows.yml
src/pmpm/: __init__.py  core.py  env_variant_generator.py  templates.py  util.py
